crates/test-ui/ui/extern_methods_feature_flag.stderr
error[E0599]: no associated function or constant named `disabled1` found for struct `MyTest` in the current scope
  --> ui/extern_methods_feature_flag.rs
   |
   | / extern_class!(
   | |     #[unsafe(super(NSObject))]
   | |     pub struct MyTest;
   | | );
   | |_- associated function or constant `disabled1` not found for this struct
...
   |       MyTest::disabled1();
   |               ^^^^^^^^^ associated function or constant not found in `MyTest`
   |
help: there is an associated function `enabled1` with a similar name
   |
32 -     MyTest::disabled1();
32 +     MyTest::enabled1();
   |

error[E0599]: no associated function or constant named `disabled2` found for struct `MyTest` in the current scope
  --> ui/extern_methods_feature_flag.rs
   |
   | / extern_class!(
   | |     #[unsafe(super(NSObject))]
   | |     pub struct MyTest;
   | | );
   | |_- associated function or constant `disabled2` not found for this struct
...
   |       MyTest::disabled2();
   |               ^^^^^^^^^ associated function or constant not found in `MyTest`
   |
help: there is an associated function `enabled2` with a similar name
   |
33 -     MyTest::disabled2();
33 +     MyTest::enabled2();
   |
